<?xml version="1.0"?>
<package>
  <name>lslidar_3d_slam</name>
  <version>0.0.1</version>
  <description>The lslidar_3d_slam package</description>
  <maintainer email="xuanbowang@lslidar.com">wangbx</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>

</package>
